# api_lyceum

./: .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  check_docker.py  create_tables_utf8.py  docker-compose.yml  fix_encoding.py  pyproject.toml  readme.txt  requirements.txt  run.py  start_api.py  sync_manual.py
app/: __init__.py  main.py
app/api/: __init__.py  deps.py
app/api/v1/: __init__.py  api.py
app/api/v1/endpoints/: __init__.py  alunos.py  health.py  security.py  sync.py
app/core/: __init__.py  config.py  database.py  security.py
app/crud/: __init__.py  aluno.py  base.py
app/db/: session.py
app/middleware/: security.py
app/models/: __init__.py  aluno.py  ly_aluno.py
app/repositories/: aluno_repository.py
app/schemas/: __init__.py  aluno.py
app/services/: __init__.py  base_sync.py  lyceum_api.py  sync_aluno.py  sync_service.py
app/utils/: __init__.py  pagination.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  init-db.sql
migrations/: env.py
scripts/: init_db.py  init_project.py
src/: main.py
src/api/: alunos.py
src/core/: config.py  database.py
src/models/: __init__.py  aluno.py  base.py  instituicao.py
src/repositories/: aluno_repository.py
src/schemas/: aluno.py
src/scripts/: init_db.py
src/services/: aluno_sync.py
tests/: conftest.py  test_lyceum_api_readonly.py  test_security.py  test_sync_real.py
